	  doing this.
	- Applied patch by Richard W.M. Jones <rjones@redhat.com> to cleanup
	  code base for gcc-4.4.

Sun, 22 Mar 2009 14:33:21 +0100

	- Some more bugfixes by me and Lon.
	- Released 5.6

Mon, 25 May 2009 02:46:32 +0200

	- Allow config lines with arbitrary length.
	- Applied patch by Mike Frysinger to not use deprecated sys_siglist
	  anymore.
	- Also removed configure test for sys_siglist.
	- Cleaned up includes, also courtesy of Mike Frysinger.

Sun, 22 Nov 2009 14:05:29 +0100

	- Applied patch by Russell Coker <russell@coker.com.au> to sets the
	  socket handle for raw socket access to close on exec.

Wed, 06 Jan 2010 13:36:37 +0100

	- Applied patch by Russell Coker <russell@coker.com.au> to give a
	  better error message if no config file is found.
	- Released version 5.7.	

Fri, 08 Jan 2010 11:02:23 +0100

	- Applied patch by Min Zhang <mzhang@mvista.com> to make logdir a
	  configurable option.

Tue, 09 Feb 2010 16:26:21 +0100

	- Disable OOM killer for watchdog and wd_keepalive. In the process also
	  make sure that the daemons do not allocate memory once they are in
	  daemon mode as a safeguard for systems running out of memory.

Thu, 11 Feb 2010 14:50:39 +0100

	- Decreased default interval from 10 seconds to just 1 because 10 is
	  too much for some hardware especially embedded systems.

Sat Mar 6 22:07:15 2010 +0100

	- Applied two patches by Jon Ringle <jon@ringle.org>:
	  - uclibc does not have index(), but strchr() is equivalent to index()
	    according to the index man page
	  - Fix compile with USE_SYSLOG disabled
	    Patch by Jon Ringle <jon@ringle.org>

Mon, 22 Mar 2010 15:24:02 +0100

	- Released 5.8

Mon May 10 15:48:35 2010 +0200

	- Applied patches by Martin Koegler <mkoegler@auto.tuwien.ac.at>:
	  - Implementing a timeout for repair scripts
	  - Fixing a few bugs.

Thu, 17 Jun 2010 16:59:53 +0200

	- Added the ability to query the watchdog type based on work by Corey
	  Minyard <minyard@acm.org>   
